[package]
name = "callrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
audiopus = "0.2.0"
base64 = "0.22.1"
bytemuck = "1.24.0"
chacha20poly1305 = "0.10.1"
cpal = "0.17.0"
crossterm = "0.29.0"
igd = "0.12.1"
local-ip-address = "0.6.8"
rand = { version = "0.9.2", features = ["std"] }
ratatui = "0.29.0"
ringbuf = "0.4.8"
rubato = "0.16.2"
serde = "1.0.228"
serde_json = "1.0.146"
tokio = { version = "1.48.0", features = ["full"] }
webrtc-ice = "0.14.0"
webrtc-util = "0.12.0"
